# nat

./: .gitignore  Cargo.toml  LICENSE  README.md  contributing.md  rustfmt.toml  snapcraft.yaml
.github/: FUNDING.yml
.github/workflows/: rust.yml
src/: input.rs  main.rs  single.rs  text_effects.rs
src/tests/: mod.rs  test_text_effects.rs
src/utils/: file_times.rs  get_group.rs  get_user.rs  group_user.rs  mod.rs  perms.rs  size.rs
