[package]
name = "natls"
version = "1.2.8"
authors = ["Will Lane <williamlane923@gmail.com>"]
description = "nat - the 'ls' replacement you never knew you needed"
license = "MIT"
repository = "https://github.com/willdoescode/nat"
edition = "2018"

[dependencies]
termion = "1.5.5"
chrono = "0.4"
users = "0.11"
pretty-bytes = "0.2.2"
ansi_term = "0.12"
structopt = "0.3"
libc = "0.2"
filetime = "0.1"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
