[package]
name = "natls"
version = "2.1.14"
authors = ["Will Lane <williamlane923@gmail.com>"]
description = "nat - the 'ls' replacement you never knew you needed"
license = "MIT"
repository = "https://github.com/willdoescode/nat"
edition = "2018"

[dependencies]
chrono = "0.4.19"
filetime = "0.2.13"
humansize = "1.1.0"
libc = "0.2.80"
pretty-bytes = "0.2.2"
structopt = "0.3.20"
termion = "1.5.5"
users = "0.11.0"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
