[package]
name = "natls"
version = "2.1.14"
authors = ["Will Lane <williamlane923@gmail.com>"]
description = "nat - the 'ls' replacement you never knew you needed"
license = "MIT"
repository = "https://github.com/willdoescode/nat"
edition = "2018"

[dependencies]
chrono = "0.4.19"
filetime = "0.2.14"
humansize = "1.1.1"
libc = "0.2.95"
pretty-bytes = "0.2.2"
structopt = "0.3.21"
termion = "1.5.6"
users = "0.11.0"


[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
